fix: fixed text overflow on mobile devices in hero section

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -110,7 +110,7 @@ body {
   }
 
   @media screen and (max-width: 48em) {
-    padding: 50px 39px 39px;
+    padding: 50px 25px 39px;
     top: 0;
     bottom: 0;
     left: 0;
@@ -122,12 +122,12 @@ body {
     justify-content: center;
 
     .mc-hero__title {
-      font-size: 1.9rem;
+      font-size: 1.6rem;
       margin-bottom: .5em;
     }
 
     .mc-hero__text {
-      font-size: 1.25rem;
+      font-size: 1.1rem;
       margin: .5rem 0;
     }
 
